# pqc-nostd

./: CHANGELOG.md  Cargo.toml  FIPS_COMPLETION_SUMMARY.md  LICENSE  PERFORMANCE.md  PHASE1_PROGRESS.md  QUICKSTART.md  README.md  SECURITY.md  build.rs  build_fips.ps1  extract_kat.ps1  fips_security_policy.md  fips_user_guide.md  kat_golden_values.txt  kat_output.txt  kat_values.txt
.agent/workflows/: fips-completion-plan.md
.github/workflows/: ci.yml
benches/: crypto_benchmarks.rs
docs/archive/: FINAL_REPORT.md  FIPS_COMPLETION_SUMMARY.md  PHASE1_PROGRESS.md  PHASE2_PLAN.md  README.md  kat_values_output.txt  kat_values_utf8.txt  ml_dsa_values.txt
scripts/: gen_kat_simple.rs  generate_kat_values.rs  inject_hmac.rs  update_kat_rs.rs
src/: auth.rs  cast.rs  csp.rs  error.rs  integrity.rs  integrity_data.rs  kat.rs  kat_old.rs.bak  kat_updated.rs  lib.rs  ml_dsa.rs  ml_kem.rs  pct.rs  preop.rs  state.rs
tests/: create_kat_file.rs  gen_kat_values.rs  generate_kat_values.rs  integration_tests.rs
